# MentOS

./: CMakeLists.txt
mentos/: CMakeLists.txt
mentos/src/mem/: buddysystem.c
mentos/src/process/: scheduler_algorithm.c
